[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/pylon_idle.png" type="Texture" id=1]
[ext_resource path="res://objects/pylon.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "pylon_idle"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("pylon_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 6 )

[node name="pylon" type="Area2D" groups=[
"robots",
]]
script = ExtResource( 2 )

[node name="pylon_sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
frame = 1

[node name="anim_plr" type="AnimationPlayer" parent="."]
anims/pylon_idle = SubResource( 1 )

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
[connection signal="mouse_entered" from="." to="." method="_on_pylon_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_pylon_mouse_exited"]
